Z-index issues with markdown buttons in full screen

--- a/iwg_blog/assets/admin/css/admin-extra.css
+++ b/iwg_blog/assets/admin/css/admin-extra.css
@@ -27,6 +27,7 @@ img.document-preview {
 
 .ui-dialog {
     position: fixed;
+    z-index: 9001!important;
 }
 
 .ui-widget {
